<resources>
    <string name="app_name">CabInMain</string>
    <string name="title_activity_phone_page">PhonePage</string>
    <string name="title_activity_registration_screen">RegistrationScreen</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nav_header_title">Ramya</string>
    <string name="nav_header_subtitle">ramyaraghunandan23@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_book_a_ride">Book A Ride</string>
    <string name="nav_my_rides">My Rides</string>
    <string name="nav_routes">Routes</string>
    <string name="nav_suggest_newroute">Suggest New Routes</string>
    <string name="nav_payments">Payments</string>
    <string name="nav_passes">Passes</string>
    <string name="nav_share_earn">Share and Earn</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_more">More</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Book A Ride</item>
        <item>MyRides</item>
        <item>Routes</item>
        <item>Suggest New Routes</item>
        <item>Payments</item>
        <item>Passes</item>
        <item>Share and Earn</item>
        <item>Notifications</item>
        <item>Feedback</item>
        <item>More</item>
    </string-array>

</resources>
